Don't use local URL for KMoreTool

This method is called a billion times and spawns a blocking(!) StatJob.
KFind can search local URLs, too, so I don't see why this is necessary.
Either way, I'd rather have a non-KDE search tool broken than the app.
Ideally, I'd like this entire thing redone to use an async StatJob, if any.
Fwiw the KMoreTools in the free space bar doesn't use a local URL either.

BUG: 420911
FIXED-IN: 20.04.1

Differential Revision: https://phabricator.kde.org/D29442